--- a/src/rule.html
+++ b/src/rule.html
@@ -70,31 +70,31 @@
       <div class="rule-right Scroll">
         <div class="scroller">
           <div class="weui_cells weui_cells_access type-list">
-            <a class="weui_cell " href="javascript:;">
+            <a class="weui_cell animal-backgorund " href="javascript:;">
               <div class="weui_cell_bd weui_cell_primary">
                 <p>售前客服</p>
               </div>
               <div class="weui_cell_ft">49</div>
             </a>
-            <a class="weui_cell " href="javascript:;">
+            <a class="weui_cell animal-backgorund " href="javascript:;">
               <div class="weui_cell_bd weui_cell_primary">
                 <p>售后客服</p>
               </div>
               <div class="weui_cell_ft">35</div>
             </a>
-            <a class="weui_cell " href="javascript:;">
+            <a class="weui_cell animal-backgorund " href="javascript:;">
               <div class="weui_cell_bd weui_cell_primary">
                 <p>售后客服</p>
               </div>
               <div class="weui_cell_ft">35</div>
             </a>
-            <a class="weui_cell " href="javascript:;">
+            <a class="weui_cell animal-backgorund " href="javascript:;">
               <div class="weui_cell_bd weui_cell_primary">
                 <p>售后客服</p>
               </div>
               <div class="weui_cell_ft">35</div>
             </a>
-            <a class="weui_cell " href="javascript:;">
+            <a class="weui_cell animal-backgorund " href="javascript:;">
               <div class="weui_cell_bd weui_cell_primary">
                 <p>售后客服</p>
               </div>
@@ -102,210 +102,210 @@
             </a>
           </div>
           <div class="weui_cells article-list weui_cells_checkbox">
-            <a class="weui_cell" href="javascript:;">
+            <a class="weui_cell animal-backgorund" href="javascript:;">
               <div class="weui_cell_bd weui_cell_primary">
                 <img src="images/图层-12.png" alt="">
                 <p>小美</p>
                 <input type="checkbox" class="weui_check" name="checkbox1" id="s11" checked="checked">
               </div>
             </a>
-            <a class="weui_cell" href="javascript:;">
+            <a class="weui_cell animal-backgorund" href="javascript:;">
               <div class="weui_cell_bd weui_cell_primary">
                 <img src="images/图层-12.png" alt="">
                 <p>小美</p>
                 <input type="checkbox" class="weui_check" name="checkbox1" id="s11" checked="checked">
               </div>
             </a>
-            <a class="weui_cell" href="javascript:;">
+            <a class="weui_cell animal-backgorund" href="javascript:;">
               <div class="weui_cell_bd weui_cell_primary">
                 <img src="images/图层-12.png" alt="">
                 <p>小美</p>
                 <input type="checkbox" class="weui_check" name="checkbox1" id="s11" checked="checked">
               </div>
             </a>
-            <a class="weui_cell" href="javascript:;">
+            <a class="weui_cell animal-backgorund" href="javascript:;">
               <div class="weui_cell_bd weui_cell_primary">
                 <img src="images/图层-12.png" alt="">
                 <p>小美</p>
                 <input type="checkbox" class="weui_check" name="checkbox1" id="s11" checked="checked">
               </div>
             </a>
-            <a class="weui_cell" href="javascript:;">
+            <a class="weui_cell animal-backgorund" href="javascript:;">
               <div class="weui_cell_bd weui_cell_primary">
                 <img src="images/图层-12.png" alt="">
                 <p>小美</p>
                 <input type="checkbox" class="weui_check" name="checkbox1" id="s11" checked="checked">
               </div>
             </a>
-            <a class="weui_cell" href="javascript:;">
+            <a class="weui_cell animal-backgorund" href="javascript:;">
               <div class="weui_cell_bd weui_cell_primary">
                 <img src="images/图层-12.png" alt="">
                 <p>小美</p>
                 <input type="checkbox" class="weui_check" name="checkbox1" id="s11" checked="checked">
               </div>
             </a>
-            <a class="weui_cell" href="javascript:;">
+            <a class="weui_cell animal-backgorund" href="javascript:;">
               <div class="weui_cell_bd weui_cell_primary">
                 <img src="images/图层-12.png" alt="">
                 <p>小美</p>
                 <input type="checkbox" class="weui_check" name="checkbox1" id="s11" checked="checked">
               </div>
             </a>
-            <a class="weui_cell" href="javascript:;">
+            <a class="weui_cell animal-backgorund" href="javascript:;">
               <div class="weui_cell_bd weui_cell_primary">
                 <img src="images/图层-12.png" alt="">
                 <p>小美</p>
                 <input type="checkbox" class="weui_check" name="checkbox1" id="s11" checked="checked">
               </div>
             </a>
-            <a class="weui_cell" href="javascript:;">
+            <a class="weui_cell animal-backgorund" href="javascript:;">
               <div class="weui_cell_bd weui_cell_primary">
                 <img src="images/图层-12.png" alt="">
                 <p>小美</p>
                 <input type="checkbox" class="weui_check" name="checkbox1" id="s11" checked="checked">
               </div>
             </a>
-            <a class="weui_cell" href="javascript:;">
+            <a class="weui_cell animal-backgorund" href="javascript:;">
               <div class="weui_cell_bd weui_cell_primary">
                 <img src="images/图层-12.png" alt="">
                 <p>小美</p>
                 <input type="checkbox" class="weui_check" name="checkbox1" id="s11" checked="checked">
               </div>
             </a>
-            <a class="weui_cell" href="javascript:;">
+            <a class="weui_cell animal-backgorund" href="javascript:;">
               <div class="weui_cell_bd weui_cell_primary">
                 <img src="images/图层-12.png" alt="">
                 <p>小美</p>
                 <input type="checkbox" class="weui_check" name="checkbox1" id="s11" checked="checked">
               </div>
             </a>
-            <a class="weui_cell" href="javascript:;">
+            <a class="weui_cell animal-backgorund" href="javascript:;">
               <div class="weui_cell_bd weui_cell_primary">
                 <img src="images/图层-12.png" alt="">
                 <p>小美</p>
                 <input type="checkbox" class="weui_check" name="checkbox1" id="s11" checked="checked">
               </div>
             </a>
-            <a class="weui_cell" href="javascript:;">
+            <a class="weui_cell animal-backgorund" href="javascript:;">
               <div class="weui_cell_bd weui_cell_primary">
                 <img src="images/图层-12.png" alt="">
                 <p>小美</p>
                 <input type="checkbox" class="weui_check" name="checkbox1" id="s11" checked="checked">
               </div>
             </a>
-            <a class="weui_cell" href="javascript:;">
+            <a class="weui_cell animal-backgorund" href="javascript:;">
               <div class="weui_cell_bd weui_cell_primary">
                 <img src="images/图层-12.png" alt="">
                 <p>小美</p>
                 <input type="checkbox" class="weui_check" name="checkbox1" id="s11" checked="checked">
               </div>
             </a>
-            <a class="weui_cell" href="javascript:;">
+            <a class="weui_cell animal-backgorund" href="javascript:;">
               <div class="weui_cell_bd weui_cell_primary">
                 <img src="images/图层-12.png" alt="">
                 <p>小美</p>
                 <input type="checkbox" class="weui_check" name="checkbox1" id="s11" checked="checked">
               </div>
             </a>
-            <a class="weui_cell" href="javascript:;">
+            <a class="weui_cell animal-backgorund" href="javascript:;">
               <div class="weui_cell_bd weui_cell_primary">
                 <img src="images/图层-12.png" alt="">
                 <p>小美</p>
                 <input type="checkbox" class="weui_check" name="checkbox1" id="s11" checked="checked">
               </div>
             </a>
-            <a class="weui_cell" href="javascript:;">
+            <a class="weui_cell animal-backgorund" href="javascript:;">
               <div class="weui_cell_bd weui_cell_primary">
                 <img src="images/图层-12.png" alt="">
                 <p>小美</p>
                 <input type="checkbox" class="weui_check" name="checkbox1" id="s11" checked="checked">
               </div>
             </a>
-            <a class="weui_cell" href="javascript:;">
+            <a class="weui_cell animal-backgorund" href="javascript:;">
               <div class="weui_cell_bd weui_cell_primary">
                 <img src="images/图层-12.png" alt="">
                 <p>小美</p>
                 <input type="checkbox" class="weui_check" name="checkbox1" id="s11" checked="checked">
               </div>
             </a>
-            <a class="weui_cell" href="javascript:;">
+            <a class="weui_cell animal-backgorund" href="javascript:;">
               <div class="weui_cell_bd weui_cell_primary">
                 <img src="images/图层-12.png" alt="">
                 <p>小美</p>
                 <input type="checkbox" class="weui_check" name="checkbox1" id="s11" checked="checked">
               </div>
             </a>
-            <a class="weui_cell" href="javascript:;">
+            <a class="weui_cell animal-backgorund" href="javascript:;">
               <div class="weui_cell_bd weui_cell_primary">
                 <img src="images/图层-12.png" alt="">
                 <p>小美</p>
                 <input type="checkbox" class="weui_check" name="checkbox1" id="s11" checked="checked">
               </div>
             </a>
-            <a class="weui_cell" href="javascript:;">
+            <a class="weui_cell animal-backgorund" href="javascript:;">
               <div class="weui_cell_bd weui_cell_primary">
                 <img src="images/图层-12.png" alt="">
                 <p>小美</p>
                 <input type="checkbox" class="weui_check" name="checkbox1" id="s11" checked="checked">
               </div>
             </a>
-            <a class="weui_cell" href="javascript:;">
+            <a class="weui_cell animal-backgorund" href="javascript:;">
               <div class="weui_cell_bd weui_cell_primary">
                 <img src="images/图层-12.png" alt="">
                 <p>小美</p>
                 <input type="checkbox" class="weui_check" name="checkbox1" id="s11" checked="checked">
               </div>
             </a>
-            <a class="weui_cell" href="javascript:;">
+            <a class="weui_cell animal-backgorund" href="javascript:;">
               <div class="weui_cell_bd weui_cell_primary">
                 <img src="images/图层-12.png" alt="">
                 <p>小美</p>
                 <input type="checkbox" class="weui_check" name="checkbox1" id="s11" checked="checked">
               </div>
             </a>
-            <a class="weui_cell" href="javascript:;">
+            <a class="weui_cell animal-backgorund" href="javascript:;">
               <div class="weui_cell_bd weui_cell_primary">
                 <img src="images/图层-12.png" alt="">
                 <p>小美</p>
                 <input type="checkbox" class="weui_check" name="checkbox1" id="s11" checked="checked">
               </div>
             </a>
-            <a class="weui_cell" href="javascript:;">
+            <a class="weui_cell animal-backgorund" href="javascript:;">
               <div class="weui_cell_bd weui_cell_primary">
                 <img src="images/图层-12.png" alt="">
                 <p>小美</p>
                 <input type="checkbox" class="weui_check" name="checkbox1" id="s11" checked="checked">
               </div>
             </a>
-            <a class="weui_cell" href="javascript:;">
+            <a class="weui_cell animal-backgorund" href="javascript:;">
               <div class="weui_cell_bd weui_cell_primary">
                 <img src="images/图层-12.png" alt="">
                 <p>小美</p>
                 <input type="checkbox" class="weui_check" name="checkbox1" id="s11" checked="checked">
               </div>
             </a>
-            <a class="weui_cell" href="javascript:;">
+            <a class="weui_cell animal-backgorund" href="javascript:;">
               <div class="weui_cell_bd weui_cell_primary">
                 <img src="images/图层-12.png" alt="">
                 <p>小美</p>
                 <input type="checkbox" class="weui_check" name="checkbox1" id="s11" checked="checked">
               </div>
             </a>
-            <a class="weui_cell" href="javascript:;">
+            <a class="weui_cell animal-backgorund" href="javascript:;">
               <div class="weui_cell_bd weui_cell_primary">
                 <img src="images/图层-12.png" alt="">
                 <p>小美</p>
                 <input type="checkbox" class="weui_check" name="checkbox1" id="s11" checked="checked">
               </div>
             </a>
-            <a class="weui_cell" href="javascript:;">
+            <a class="weui_cell animal-backgorund" href="javascript:;">
               <div class="weui_cell_bd weui_cell_primary">
                 <img src="images/图层-12.png" alt="">
                 <p>小美</p>
                 <input type="checkbox" class="weui_check" name="checkbox1" id="s11" checked="checked">
               </div>
             </a>
-            <a class="weui_cell" href="javascript:;">
+            <a class="weui_cell animal-backgorund" href="javascript:;">
               <div class="weui_cell_bd weui_cell_primary">
                 <img src="images/图层-12.png" alt="">
                 <p>小美</p>
@@ -357,44 +357,16 @@
       compile: function(ret) {
         console.log(2)
       },
-
-    })
-
-    /*//  删除
-    var flag = 1;
-    $('#delete').on('click', function(event) {
-      event.preventDefault();
-      if (flag) {
-        $('.article-list a.weui_cell').each(function(index, el) {
-          var checked = $('<i class="weui_icon_checked"></i>');
-          $(this).find('.weui_cell_bd').append(checked);
-        });
-        flag = 0;
-
-
-        $('.weui_icon_checked').each(function(index, el) {
-          $(el).on('click', function(event) {
-            event.preventDefault();
-            var
-            if (true) {
-              $(this).click(function(event) {
-                $(this).addClass('on');
-                console.log(6)
-              });
-            }
-          });
-        });
-      } else {
-        $('.article-list a.weui_cell').each(function(index, el) {
-          $(this).find('.weui_icon_checked').remove();
-        });
-        flag = 1
+      submitChange: function(ret) {
+        console.log('提交')
+      },
+      scrollContent: function(ret) {
+        console.log('滚动');
+      },
+      scrollContentFooter: function(ret) {
+        console.log('滚到底部了');
       }
-    });*/
-
-
-
-
+    })
   });
   </script>
 </body>
