'部门管理页面、'

--- a/src/rule.html
+++ b/src/rule.html
@@ -36,37 +36,14 @@
         <li class="on">能力分</li>
         <li>工作分</li>
         <li>工作分</li>
-        <li>工作分</li>
-        <li>工作分</li>
-        <li>工作分</li>
-        <li>工作分</li>
-        <li>工作分</li>
-        <li>工作分</li>
-        <li>工作分</li>
-        <li>工作分</li>
-        <li>工作分</li>
-        <li>工作分</li>
-        <li>工作分</li>
-        <li>工作分</li>
-        <li>工作分</li>
-        <li>工作分</li>
-        <li>工作分</li>
-        <li>工作分</li>
-        <li>工作分</li>
-        <li>工作分</li>
-        <li>工作分</li>
-        <li>工作分</li>
-        <li>工作分</li>
-        <li>工作分</li>
-        <li>工作分</li>
-        <li>工作分</li>
+        
       </ul>
     </div>
     <!-- </div> -->
     <div class="rule-right-bar">
       <div class="rule-right-top clearfix">
         <div class="searchbar_wrap"></div>
-        <div class="returnPreLayer">返回上级</div>
+        <div class="returnPreLayer"><i class="icon icon-41"></i>返回上级</div>
       </div>
       <div class="rule-right Scroll">
         <div class="scroller">
