--- a/src/rule.html
+++ b/src/rule.html
@@ -341,6 +341,9 @@
       scrollContent: function(ret) {
         console.log('滚动');
       },
+      abolishChange: function(){
+        console.log('取消');
+      },
       scrollContentFooter: function(ret) {
         console.log('滚到底部了');
       }
